plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.j10d207'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	//MySQL connector
	runtimeOnly 'com.mysql:mysql-connector-j'

	//Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	//Gson
	implementation 'com.google.code.gson:gson:2.8.8'

	// Email
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	//Spring Data JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	//Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	//SpringSecurity
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	//Oauth 2.0
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	//JASYPT
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'

	//JWT 0.12.3 의존성
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	//AWS S3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	//JAXB API
	implementation 'javax.xml.bind:jaxb-api:2.3.1'

	//JAXB Runtime
	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.3'

	//JUnit Jupiter API 및 엔진 추가
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'

	//Validation Check
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// http 요청을 위한 webclient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// Spring Data MongoDB 의존성
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

	// Firebase token
	implementation 'com.google.firebase:firebase-admin:9.3.0'

	// 검색을 위한 elasticsearch 의존성
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

}

tasks.named('test') {
	useJUnitPlatform()
}
